# pico-makemore

./: README.md  makemore_bigram.ipynb  micrograd.ipynb  pyproject.toml
.ipynb_checkpoints/: makemore_bigram-checkpoint.ipynb  micrograd-checkpoint.ipynb
