[tool.poetry]
name = "pico-makemore"
version = "0.1.0"
description = "Notebooks from Andrej Karpathy's makemore tutorial series"
authors = ["Ch1n3du <danielonyesoh@gmail.com>"]
readme = "README.md"
packages = [{include = "pico_makemore"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.0"
matplotlib = "^3.7.1"
numpy = "^1.24.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
